[tool.poetry]
name = "domain-driven-design"
version = "0.1.0"
description = ""
authors = ["ukastsiukevich <grun_gespenst@tut.by>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.36"
pytest = "^8.3.3"
flake8 = "^7.1.1"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
